[tool.poetry]
name = "snowowl"
version = "0.0.3"
description = "A collection of common data structures"
readme = "README.md"
homepage = "https://github.com/greyshell/snowowl"
authors = ["ABHIJIT SINHA <grey.shell@gmail.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.9.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
